# interference

./: CMakeLists.txt  LICENSE  LICENSE.md  Neuron.cpp  Neuron.h  README.md  RELEASES.md
docs/: Doxyfile  README.md  header.html
include/: error.h  neuralnet.h  neuron.h  position.h
include/indk/: computer.h  error.h  interlink.h  neuralnet.h  neuron.h  position.h  profiler.h  system.h
include/indk/backends/: default.h  multithread.h  opencl.h
include/inn/: computer.h  computer.hpp  error.h  interlink.h  neuralnet.h  neuron.h  position.h  system.h
include/inn/backends/: default.h  multithread.h  opencl.h
samples/general/: CMakeLists.txt  bmp.hpp  general.cpp  general.h  main.cpp
samples/general/structures/: structure.json
samples/general/texts/: rules.txt  vocab.txt
samples/inn_vision/: CMakeLists.txt  main.cpp
samples/lang/: CMakeLists.txt  main.cpp
samples/lang/structures/: structure.json
samples/lang/texts/: vocab.txt
samples/multimodal/: CMakeLists.txt  bmp.hpp  main.cpp  structure.json
samples/multimodal/structures/: structure.json
samples/test/: CMakeLists.txt  main.cpp  structure.json
samples/test/structures/: structure_bench.json  structure_general.json
samples/vision/: CMakeLists.txt  bmp.hpp  main.cpp  structure.json
samples/vision/structures/: structure.json
src/: computer.cpp  error.cpp  interlink.cpp  link.cpp  neuralnet.cpp  position.cpp  profiler.cpp  system.cpp
src/backends/: default.cpp  multithread.cpp  opencl.cpp
src/neuralnet/: link.cpp  neuralnet.cpp
src/neuron/: computer.cpp  entry.cpp  neuron.cpp  receptor.cpp  synaps.cpp  synapse.cpp  system.cpp
test/: CMakeLists.txt  log  main.cpp  structure.json  structure2.json
